# quark

./: .dockerignore  .gitattributes  .gitignore  CLA.PT_BR.md  CLA.md  CLAUDE.md  CONTRIBUTING.PT_BR.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.PT_BR.md  README.md  docker-compose.e2e.yml  docker-compose.yml  docker-entrypoint.sh  fly.toml  fly.toml.example
.github/workflows/: ci.yml  cla.yml
.superpowers/sdd/: task-5-report.md
.wrangler/cache/: pages.json  wrangler-account.json
benches/: compare_bench.rs  permute_bench.rs  redirect_bench.rs
docs/: AB-TESTING.PT_BR.md  AB-TESTING.md  ANALYTICS.PT_BR.md  ANALYTICS.md  API-TOKENS.PT_BR.md  API-TOKENS.md  API.PT_BR.md  API.md  ARCHITECTURE.PT_BR.md  ARCHITECTURE.md  CONFIGURATION.PT_BR.md  CONFIGURATION.md  CONVERSION-FORWARDING.PT_BR.md  CONVERSION-FORWARDING.md  DECISAO-host-compartilhado-P3.md  DECISAO-p2d-oidc-por-tenant.md  DECISAO-p4-integracoes-analytics.md  DEEP-LINKING.PT_BR.md  DEEP-LINKING.md  DEPLOY-MULTIREGION.PT_BR.md  DEPLOY-MULTIREGION.md  DEPLOY.PT_BR.md  DEPLOY.md  DEVELOPMENT.PT_BR.md  DEVELOPMENT.md  DOC-AUDIT-SUMMARY.md  EDGE.PT_BR.md  EDGE.md  IMPORT.PT_BR.md  IMPORT.md  LINK-HEALTH.PT_BR.md  LINK-HEALTH.md  LINK-PASSWORD.PT_BR.md  LINK-PASSWORD.md  OIDC-LOGIN.PT_BR.md  OIDC-LOGIN.md  PRIVACY.PT_BR.md  PRIVACY.md  REDIRECT-RULES.PT_BR.md  REDIRECT-RULES.md  (+12 more)
docs/plans/: 2026-07-12-brick1-storage-abstraction.md  2026-07-12-brick2-analytics.md  2026-07-12-quark-implementation.md  2026-07-13-brick3-l2-valkey.md  2026-07-13-brick4-postgres.md  2026-07-13-brick5-clickhouse.md  2026-07-13-brick6-escala-horizontal.md  2026-07-13-brick7-anti-abuso.md  2026-07-13-brick8-painel-api.md  2026-07-13-brick9-spa-painel.md  2026-07-13-tijolo10-busca-server-side.md  2026-07-13-webhooks.md  2026-07-14-deep-linking.md  2026-07-14-device-redirect.md  2026-07-15-sheets-integration.md  2026-07-16-multi-tenancy-p1a-data-foundation.md  2026-07-16-multi-tenancy-p1b-auth-binding.md  2026-07-16-multi-tenancy-p2a-enforcement.md  2026-07-16-multi-tenancy-p2b-backend.md  (+13 more)
scripts/: loadtest.k6.js
src/: analytics.rs  api.rs  auth.rs  cache.rs  cluster.rs  codec.rs  dns.rs  domain.rs  domain_router.rs  health.rs  import.rs  invalidate.rs  invite.rs  lib.rs  main.rs  oidc.rs  password.rs  permute.rs  pixel.rs  secretbox.rs  slack.rs  sso.rs  store.rs  tenant.rs
tests/: analytics_api_it.rs  analytics_sink_it.rs  api_it.rs  api_tokens_store_it.rs  clickhouse_sink_it.rs  domains_it.rs  horizontal_scale_it.rs  import_it.rs  invites_it.rs  oidc_config_it.rs  pixel_forward_it.rs  pixel_store_it.rs  pixels_api_it.rs  postgres_analytics_it.rs  postgres_store_it.rs  pubsub_invalidation_it.rs  search_it.rs  sheets_sync_it.rs  sso_domains_it.rs  store_it.rs  store_trait.rs  tenant_enforcement.rs  tenant_isolation.rs  tokens_api_it.rs  valkey_tier_it.rs  webhook_outbox_it.rs  webhooks_api_it.rs  webhooks_store_it.rs  workspace_it.rs
web/: .env.production  .gitignore  .oxlintrc.json  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+245 files in other folders)
