[package]
name = "quark"
version = "0.1.0"
edition = "2021"
description = "URL shortener whose short code is a calibrated reduced-round ARX permutation"
license = "AGPL-3.0-only"

[lib]
name = "quark"
path = "src/lib.rs"

[[bin]]
name = "quark"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
heed = "0.20"
moka = { version = "0.12", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.27", features = ["tokio-comp"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
clickhouse = "0.13"
url = "2"
tower-http = { version = "0.6", features = ["cors"] }
hmac = "0.13.0"
sha2 = "0.11.0"
base64 = "0.22.1"
getrandom = "0.4.3"

[dev-dependencies]
serial_test = "3"
tokio = { version = "1", features = ["test-util"] }
tempfile = "3"
tower = "0.5"
criterion = { version = "0.5", features = ["async_tokio"] }
sqids = "0.4.2"
harsh = "0.2.2"

[[bench]]
name = "permute_bench"
harness = false

[[bench]]
name = "compare_bench"
harness = false

[[bench]]
name = "redirect_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
